--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^16.0.21",
     "@types/react-dom": "^16.0.2",
     "@types/react-redux": "^5.0.12",
+    "@types/react-select": "^1.0.59",
     "@types/redux-logger": "^3.0.5",
     "react": "^16.0.0",
     "react-audio-player": "^0.6.2",
@@ -13,6 +14,8 @@
     "react-redux": "^5.0.6",
     "react-redux-typescript": "^2.3.0",
     "react-scripts-ts": "2.8.0",
+    "react-select": "^1.0.0-rc.10",
+    "reactstrap": "^5.0.0-alpha.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
